# server-client

./: .gitignore  CMakeLists.txt  README.md
CLient/: CLient.pro  client.cpp  client.h  clientQT.cpp  clientQT.h  clientQT.ui  images.qrc  main.cpp  recvthread.cpp  recvthread.h
build-CLient-Desktop-Debug/: Client  Makefile  qrc_images.cpp  ui_clientQT.h
build-CLient-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-CLient-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: QCloseEvent.17559D5835D154CC.idx  QMutex.DBA3494ED5AD994B.idx  QSplashScreen.DF4DA6581F6B7166.idx  QStackedWidget.B8314F39A0843D55.idx  QStringListModel.85B2E223B8F9C6A5.idx  QThread.8C086A13FD8B87FF.idx  atomic_futex.h.41BFB9690BA42F4D.idx  auto_ptr.h.AFB66FA9E40BF1C9.idx  basic_ios.h.85B21622C3EB733E.idx  basic_ios.tcc.3861A81473EB41D2.idx  bitset.8EFD5F8BAE868062.idx  byteswap.h.6F2302C3C3B7048C.idx  client.cpp.851A6F474D88E9B6.idx  client.h.8B0B0EF8BDD4977C.idx  clientQT.cpp.555F7EAFC5E9B543.idx  clientQT.h.A0EB5233FC2FAC26.idx  condition_variable.7516F278C9956C63.idx  deque.06B6E7638C7129F2.idx  (+82 more)
database/: init.sql
docker/: Dockerfile_client  Dockerfile_mysql  Dockerfile_server  docker-compose.yml
k8s/: LocalPersistentVolume.yaml  LocalPersistentVolumeClaim.yaml  LocalStorageClass.yaml  README.md  chat-server-mysql.yaml  kubernetes.yaml  mysql-pv.yaml  mysql.yaml  server.yaml
scripts/: build_run_client.sh  cpp_formatter.sh  create_client_shortcut.sh  run_client.sh  run_client_qt.sh
scripts/build_client/: CMakeLists.txt  build_client.sh
scripts/build_server/: CMakeLists.txt  build_server.sh
shortcut/: client.desktop
src/: client.cpp  client_for_test.cpp  client_main.cpp  log.cpp  log.h  login_class.cpp  server.cpp  server_main.cpp
src/header/: client.h  server.h  utils.h
test/: CMakeLists.txt  test.cpp  unitTest.cpp
unittest/: CMakeLists.txt  build_ut.sh  checkcodingstyle.sh  compile.sh  unitTestClient.cpp  unittest.sh  ut_client_clientTest.cpp  ut_client_flow_login.cpp  ut_client_flow_register.cpp  ut_client_sendName.cpp  ut_server_connectToClients.cpp  ut_server_createSocket.cpp
